Fixed: Order Status filter: <select> is not vertically aligned when Gutenberg is installed

--- a/plugins/woocommerce-admin/packages/components/src/filters/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/filters/style.scss
@@ -117,3 +117,9 @@
 		}
 	}
 }
+
+.woocommerce-filters-advanced__list-item {
+	.components-base-control + .components-base-control {
+		margin-bottom: 0;
+	}
+}
